Enable text wrapping on text files - fixes #373

--- a/src/style/_legacy/components/text_file.scss
+++ b/src/style/_legacy/components/text_file.scss
@@ -1,3 +1,6 @@
+.text-file {
+    white-space: pre-wrap;
+}
 .font-msdos {
     font-family:ibm_vga_8x16, dejavu_sans_monobook, monospace;
     font-size:16px;
